--- a/opa_ecomm_essentials/templates/payment.xml
+++ b/opa_ecomm_essentials/templates/payment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <template id="operfel_info_user_payment" inherit_id="website_sale.payment"
-        name="operfel_info_user_payment">
+        <template id="opa_info_user_payment" inherit_id="website_sale.payment"
+        name="opa_info_user_payment">
         <!-- Agregar informacion de Facturacion y envio del usuario en Pantalla de Pago-->
             <xpath expr="//div[@id='shipping_and_billing']" position="inside">
                 <t t-esc="order.partner_id.name" /><br />
@@ -13,8 +13,8 @@
         </template>
 
         
-        <template id="operfel_info_user_confirmation" inherit_id="website_sale.confirmation"
-        name="operfel_info_user_confirmation">
+        <template id="opa_info_user_confirmation" inherit_id="website_sale.confirmation"
+        name="opa_info_user_confirmation">
         <!-- Agregar informacion de Facturacion y envio del usuario en Pantalla de Confirmacion-->
             <xpath expr="//div[hasclass('card')]/div[hasclass('card-body')]" position="inside">
                 <t t-esc="order.partner_id.name" /><br />
@@ -24,7 +24,7 @@
             </xpath>            
         </template>
 
-        <template id="operfel_info_user_checkout" inherit_id="website_sale.address_kanban" name="operfel info user checkout">
+        <template id="opa_info_user_checkout" inherit_id="website_sale.address_kanban" name="opa info user checkout">
          <!-- Agregar informacion de Facturacion y envio del usuario en Pantalla de Direcciones-->
             <xpath expr="//div[hasclass('card-body')]" position="inside">
                 <t t-esc="contact.identifier" /><br />
