--- a/web_ulda/static/src/styles/dev.scss
+++ b/web_ulda/static/src/styles/dev.scss
@@ -1,4 +1,5 @@
-// @import 'generales.scss';
-// @import 'header.scss';
-// @import 'footer.scss';
-// @import 'home.scss';
+@import 'generales.scss';
+@import 'header.scss';
+@import 'footer.scss';
+@import 'home.scss';
+@import 'shop.scss';
