--- a/web_ulda/static/src/dev/dev.css
+++ b/web_ulda/static/src/dev/dev.css
@@ -6,8 +6,14 @@ CLASES Y VARIABLES GENERALES
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&amp;display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap");
 :root {
   --web__color1:#CBA6C3;
   --web__color2:#AAABD3;
@@ -16,7 +22,7 @@ CLASES Y VARIABLES GENERALES
   --alpha:#353866!important;
   --primary:#353866!important;
   --fuente-titulos:"Open Sans", sans-serif;
-  --fuente-general:"Nunito", sans-serif;
+  --fuente-general:"Open Sans", sans-serif;
   --t1:68px;
   --t2:45px;
   --t3:30px;
@@ -44,6 +50,7 @@ CLASES Y VARIABLES GENERALES
 body {
   font-family: var(--fuente-general) !important;
   font-size: var(--texto);
+  color: var(--web__color4);
 }
 
 p {
@@ -303,6 +310,7 @@ hr.border-primary {
   border-radius: 0 40% 40% 0;
   top: 0px;
   bottom: 0px;
+  background-color: var(--web__color4) !important;
 }
 .te_header_before_overlay .te_header_style_2_right .ulda_user_account {
   display: inline-block;
@@ -332,11 +340,19 @@ header .te_header_navbar, header.affixed .te_header_navbar {
   background-color: var(--aqua-color-1-40) !important;
   padding: 10px 0 !important;
 }
+header .te_header_navbar #top_menu_collapse ul#top_menu .nav-item, header.affixed .te_header_navbar #top_menu_collapse ul#top_menu .nav-item {
+  border-left: none;
+}
+header .te_header_navbar #top_menu_collapse ul#top_menu .nav-item .nav-link span, header.affixed .te_header_navbar #top_menu_collapse ul#top_menu .nav-item .nav-link span {
+  font-size: 14px;
+  font-weight: 600;
+}
 @media (max-width: 991px) {
   header .te_header_navbar .navbar-brand, header.affixed .te_header_navbar .navbar-brand {
     display: block !important;
   }
 }
+
 .o_footer > #footer {
   border-top: unset !important;
 }
@@ -357,6 +373,13 @@ header .te_header_navbar, header.affixed .te_header_navbar {
 }
 #footer .footer__grid .columna {
   font-size: 0.813rem;
+}
+#footer .footer__grid .columna_center {
+  display: flex;
+  justify-content: center;
+}
+#footer .footer__grid .columna_content {
+  width: 80%;
 }
 #footer .footer__grid .columna h5 {
   font-weight: 700;
@@ -449,6 +472,11 @@ header .te_header_navbar, header.affixed .te_header_navbar {
   padding: 0 10px;
   margin-left: -10px;
 }
+.ulda .s_carousel .carousel-item .carousel-content .s_btn a {
+  font-size: 18px;
+  font-family: var(--fuente-titulos) !important;
+  font-weight: 300 !important;
+}
 @media (min-width: 1600px) {
   .ulda .s_carousel .carousel-item {
     min-height: 800px !important;
@@ -483,6 +511,7 @@ header .te_header_navbar, header.affixed .te_header_navbar {
 .ulda .te_numbers #te_counter p {
   font-size: 24px;
   line-height: 130%;
+  font-weight: 300;
 }
 @media (max-width: 991px) {
   .ulda .te_numbers #te_counter {
@@ -508,31 +537,67 @@ header .te_header_navbar, header.affixed .te_header_navbar {
 }
 .ulda .te_offer_s2_img .te_offer_s2_img_before {
   background-color: var(--web__color2);
+  left: -20px;
 }
 .ulda .te_offer_s2_img img {
   margin-left: auto !important;
+  max-width: 100%;
 }
-.ulda .snippet_right_timer_div .rounded_digit {
+.ulda .te_offer_s2_section .precio_oferta {
+  justify-content: center;
+  align-items: center;
+}
+.ulda .te_offer_s2_section .precio_oferta .precio_promo {
+  font-size: 24px;
+}
+.ulda .te_offer_s2_section .precio_oferta .precio_normal {
+  color: gray;
+  text-decoration: line-through;
+  font-size: 20px;
+}
+.ulda .te_offer_s2_section .snippet_right_timer_div {
+  display: flex;
+  justify-content: center;
+  margin-left: 20px !important;
+}
+.ulda .te_offer_s2_section .snippet_right_timer_div .rounded_digit {
+  color: white !important;
+  padding: 20px 0 !important;
+  width: 100px;
+  height: 100px;
+}
+.ulda .te_offer_s2_section .snippet_right_timer_div .rounded_digit .te_days_hr_min_sec_digit {
+  font-size: 40px;
+  font-family: var(--fuente-titulos);
+  line-height: 1;
   color: white !important;
 }
-.ulda .snippet_right_timer_div .rounded_digit span {
-  color: white !important;
-}
-.ulda .snippet_right_timer_div span:nth-child(1) .rounded_digit {
+.ulda .te_offer_s2_section .snippet_right_timer_div span:nth-child(1) .rounded_digit {
   background-color: var(--web__color4) !important;
 }
-.ulda .snippet_right_timer_div span:nth-child(2) .rounded_digit {
+.ulda .te_offer_s2_section .snippet_right_timer_div span:nth-child(2) .rounded_digit {
   background-color: var(--web__color3) !important;
 }
-.ulda .snippet_right_timer_div span:nth-child(3) .rounded_digit {
+.ulda .te_offer_s2_section .snippet_right_timer_div span:nth-child(3) .rounded_digit {
   background-color: var(--web__color2) !important;
 }
-.ulda .snippet_right_timer_div span:nth-child(4) .rounded_digit {
+.ulda .te_offer_s2_section .snippet_right_timer_div span:nth-child(4) .rounded_digit {
   background-color: var(--web__color1) !important;
+}
+@media (max-width: 599px) {
+  .ulda .te_offer_s2_section .snippet_right_timer_div {
+    margin-left: 0 !important;
+  }
 }
 @media (max-width: 991px) {
   .ulda .s_three_columns h2 {
     font-size: 50px !important;
+  }
+}
+@media (min-width: 1200px) {
+  .ulda .s_three_columns .card-img-top {
+    max-height: unset;
+    padding: 0 20px;
   }
 }
 @media (max-width: 991px) {
@@ -540,16 +605,71 @@ header .te_header_navbar, header.affixed .te_header_navbar {
     width: unset;
   }
 }
+.ulda .overflow-hidden {
+  position: relative;
+}
+.ulda .overflow-hidden .linear-gradient {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), transparent);
+}
+.ulda .te_3_s11_content {
+  color: white !important;
+}
+.ulda .te_3_s11_content a {
+  color: white !important;
+  border-color: white;
+}
+.ulda .te_3_s11_content::before {
+  border-top: 2px solid white !important;
+  border-bottom: 2px solid white !important;
+}
+.ulda .te_3_s11_content::after {
+  border-left: 2px solid white !important;
+  border-right: 2px solid white !important;
+}
 .ulda .s_newsletter_block .content-input-email {
   width: 100%;
   display: flex;
   height: 100px;
   align-items: center;
 }
+.ulda .s_newsletter_block .content-input-email a.btn-primary {
+  background-color: var(--web__color4) !important;
+}
 @media (max-width: 599px) {
   .ulda .s_newsletter_block .js_subscribe_email {
     padding: 0.475rem 1rem;
   }
+}
+
+#wrapwrap .o_wsale_product_btn .btn {
+  background-color: white !important;
+  color: black !important;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#wrapwrap .o_wsale_product_btn .btn:hover {
+  background-color: var(--web__color2) !important;
+  border-color: var(--web__color2) !important;
+  color: white !important;
+}
+#wrapwrap .o_wsale_product_information_text {
+  background: #f7f7f7;
+}
+#wrapwrap .o_wsale_product_information_text h6.o_wsale_products_item_title a.product_name {
+  font-size: 18px !important;
+  height: 30px !important;
+  font-family: var(--fuente-titulos) !important;
+  color: var(--web__color4);
+}
+#wrapwrap .o_wsale_product_information_text .product_price {
+  font-family: var(--fuente-titulos);
+  color: var(--web__color4);
+  font-weight: 400;
+  font-size: 14px;
 }
 
 /*# sourceMappingURL=dev.css.map */
