--- a/web_ulda/static/src/styles/home.scss
+++ b/web_ulda/static/src/styles/home.scss
@@ -31,6 +31,14 @@
                         margin-left: -10px;
                     }
                 }
+
+                .s_btn{
+                    a{
+                        font-size: 18px;
+                        font-family: var(--fuente-titulos)!important;
+                        font-weight: 300!important;
+                    }
+                }
             }
         }
 
@@ -75,6 +83,7 @@
             p{
                 font-size: 24px;
                 line-height: 130%;
+                font-weight: 300;
             }
         }
 
@@ -110,52 +119,98 @@
     .te_offer_s2_img{
         .te_offer_s2_img_before{
             background-color: var(--web__color2);
+            left: -20px;
         }
 
         img{
             margin-left: auto!important;
+            max-width: 100%;
+        }
+
+    }
+
+    .te_offer_s2_section{
+        .precio_oferta{
+            justify-content: center;
+            align-items: center;
+            .precio_promo{
+                font-size: 24px;
+                
+            }
+
+            .precio_normal{
+                color: gray;
+                text-decoration: line-through;
+                font-size: 20px;
+            }
+        }
+        .snippet_right_timer_div{
+            display: flex;
+            justify-content: center;
+            margin-left: 20px!important;
+            
+            .rounded_digit{
+                color: white!important;
+                padding: 20px 0!important;
+                width: 100px;
+                height: 100px;
+    
+    
+                .te_days_hr_min_sec_digit{
+                    font-size: 40px;
+                    font-family: var(--fuente-titulos);
+                    line-height: 1;
+                    color: white!important;
+                }
+                
+            }
+            span:nth-child(1){
+                .rounded_digit{
+                    background-color:var(--web__color4)!important;
+                }
+            }
+    
+            span:nth-child(2){
+                .rounded_digit{
+                    background-color:var(--web__color3)!important;
+                }
+            }
+    
+            span:nth-child(3){
+                .rounded_digit{
+                    background-color:var(--web__color2)!important;
+                }
+            }
+    
+            span:nth-child(4){
+                .rounded_digit{
+                    background-color:var(--web__color1)!important;
+                }
+            }
+        }
+
+        @media(max-width:599px){
+            .snippet_right_timer_div{
+                margin-left: 0!important;
+            }
         }
     }
     
         
 
-    .snippet_right_timer_div{
-        .rounded_digit{
-            color: white!important;
-            span{
-                color: white!important;
-            }
-        }
-        span:nth-child(1){
-            .rounded_digit{
-                background-color:var(--web__color4)!important;
-            }
-        }
-
-        span:nth-child(2){
-            .rounded_digit{
-                background-color:var(--web__color3)!important;
-            }
-        }
-
-        span:nth-child(3){
-            .rounded_digit{
-                background-color:var(--web__color2)!important;
-            }
-        }
-
-        span:nth-child(4){
-            .rounded_digit{
-                background-color:var(--web__color1)!important;
-            }
-        }
-    }
 
     .s_three_columns{
 
         @media(max-width:991px){
             h2{
                 font-size: 50px!important;
+            }
+        }
+
+        @media(min-width:1200px){
+            .card-img-top{
+                max-height: unset;
+                padding: 0 20px;
             }
         }
     }
@@ -171,12 +226,49 @@
         }
     }
 
+
+    
+    
+    .overflow-hidden{
+        position: relative;
+        .linear-gradient{
+            position: absolute;
+            top: 0;
+            bottom:0;
+            left: 0;
+            right: 0;
+            background: linear-gradient(90deg, rgba(0,0,0,.5), transparent);
+        }
+    }
+    .te_3_s11_content{
+        color: white!important;
+
+        a{
+            color: white!important;
+            border-color: white;
+        }
+
+        &::before{
+            border-top:2px solid white!important;
+            border-bottom:2px solid white!important;
+        }
+        &::after{
+            border-left:2px solid white!important;
+            border-right:2px solid white!important;
+        }
+    }
+
+
     .s_newsletter_block{
         .content-input-email{
             width: 100%;
             display: flex;
             height: 100px;
             align-items: center;
+
+            a.btn-primary{
+                background-color: var(--web__color4)!important;
+            }
         }
 
         @media(max-width:599px){
