--- a/web_ulda/templates/assets.xml
+++ b/web_ulda/templates/assets.xml
@@ -6,10 +6,10 @@
 
             <link rel="stylesheet" type="text/css" href="/web_ulda/static/src/styles/generales.scss"/>
             <link rel="stylesheet" type="text/css" href="/web_ulda/static/src/styles/home.scss"/>
-
+            <link rel="stylesheet" type="text/css" href="/web_ulda/static/src/styles/shop.scss"/>
 
            
-             <!-- <link rel="stylesheet" type="text/css" href="http://127.0.0.1:5500/addons/web_ulda/static/src/dev/dev.css"/> -->
+             <!-- <link rel="stylesheet" type="text/css" href="http://127.0.0.1:5500/web_ulda/static/src/dev/dev.css"/> -->
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous"/>
         </xpath>
     </template>
