--- a/web_ulda/static/src/styles/generales.scss
+++ b/web_ulda/static/src/styles/generales.scss
@@ -182,13 +182,13 @@ hr.border-primary{
 
 #add_to_cart{
     i,span{
-        display: none;
+        // display: none;
     }
 }
 
 #buy_now{
     i,span{
-        display: none;
+        // display: none;
     }
 }
 
