--- a/web_ulda/static/src/styles/home.scss
+++ b/web_ulda/static/src/styles/home.scss
@@ -192,6 +192,18 @@
         @media(max-width:599px){
             .snippet_right_timer_div{
                 margin-left: 0!important;
+                width: 100%!important;
+                justify-content: space-between;
+
+                .rounded_digit{
+                    padding: 15px 0!important;
+                    width: 70px;
+                    height: 70px;
+                    .te_days_hr_min_sec_digit{
+                        font-size: 20px;
+                    }
+                }
+
             }
         }
     }
