--- a/web_ulda/static/src/styles/shop.scss
+++ b/web_ulda/static/src/styles/shop.scss
@@ -37,3 +37,136 @@
 
 
 //product
+
+
+#product_details{
+
+   
+
+    .variant_attribute{
+        border-bottom: 0.5px solid #424242!important;
+    } 
+
+    .js_add_cart_variants {
+        
+        &>li:first-child{
+            margin-bottom: 20px;
+        }
+
+        .list-inline-item {
+            &.active_li{
+                border-color: black!important;
+            }
+            border-radius: 0!important;
+
+            .css_attribute_color{
+                border-radius: 0!important;
+                width: 35px!important;
+                height: 32px!important;
+            }
+
+        }
+
+        ul.list-unstyled {
+            display: flex;
+
+            
+
+            li.js_attribute_value{
+                margin-right: 20px!important;
+                line-height: 0;
+
+                input.js_variant_change.radio_input{
+                    &:checked ~ .radio_input_value span {
+                        border-color: black!important;
+                    }
+                    display: none!important;
+                }
+
+                .radio_input_value{
+                    span{
+                        border: 1px solid #D8D6D9;
+                        padding: 5px 10px;
+                        width: 40px;
+                        height: 40px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        cursor: pointer;
+                    }
+                }
+
+                @media(max-width:599px){
+                    width: 50px;
+                    margin-right: 0!important;
+                }
+            }
+        }
+    }
+
+    .nuevo-div{
+        display: flex;
+        align-items: center;
+        #add_to_cart, #buy_now{
+            max-height: 50px;
+            background: transparent!important;
+            color: #424242!important;
+            padding-right: 1rem;
+            padding-left: 1rem;
+            font-size: 0.9rem;
+
+            &:hover{
+                background: var(--web__color2)!important;
+                color: white!important;
+            }
+        }
+
+        @media(max-width:599px){
+            flex-direction: column;
+            align-items: unset;
+        }
+
+        @media(max-width: 1299px){
+            #add_to_cart, #buy_now{
+                font-size: 0.8rem;
+            }
+        }
+
+    }
+
+    .te_product_quantity{
+        .input-group-prepend, .input-group-append {
+            a.btn-secondary{
+                height: 40px;
+                width: 40px;
+                border-radius: 50%;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 7px;
+
+                color: #424242!important;
+            }
+        }
+    }
+
+    .o_add_wishlist_dyn{
+        border-radius: 50%!important;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 45px;
+        width: 45px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .product_price{
+        border-bottom: 0.5px solid black;
+        
+        .oe_price{
+            font-weight: 400;
+        }
+    }
+}
