--- a/web_ulda/templates/dev.xml
+++ b/web_ulda/templates/dev.xml
@@ -144,7 +144,7 @@
 						<div class="form-group row form-field o_website_form_custom o_website_form_required_custom">
 							<div class="col-lg-12 col-md-4">
 							<label class="col-form-label" for="pregunta">Pregunta</label>
-							<textarea class="form-control o_website_form_input" name="Su pregunta" required=""/>
+							<textarea class="form-control o_website_form_input" name="Su pregunta" required="" rows="6"/>
 							</div>
 						</div>
 						<div class="form-group row">
