--- a/web_ulda/templates/shop.xml
+++ b/web_ulda/templates/shop.xml
@@ -23,7 +23,7 @@
             </xpath>
 
             <xpath expr="." position="inside">
-                <script src="http://127.0.0.1:5500/addons/web_ulda/static/src/js/prueba.js">
+                <script src="/web_ulda/static/src/js/product.js">
                 </script>
             </xpath>
         </template>
